--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,7 +34,7 @@
   <title>Sales Tracker</title>
 </head>
 <body>
-<div id="app" class="container"></div>
+<div id="app" class="container-fluid"></div>
 <script src="https://d3js.org/d3.v4.js"></script>
 </body>
 </html>
