added dynamic data

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -75,7 +75,7 @@ td.fuel-savings-label {
 }
 
 .grid-row.row.filter-panel {
-    margin: 10px 0;
+    margin: 10px;
     padding: 10px;
     box-shadow: 0 0 15px;
     .search-model {
